@@ -158,3 +158,4 @@ https://www.taiwannews.com.tw/ch/news/3872363
 https://news.cts.com.tw/cts/local/202002/202002141990524.html
 https://news.cts.com.tw/cts/local/202002/202002141990559.html
 https://turnnewsapp.com/choice/165937.html
+https://estate.ltn.com.tw/article/9099
