@@ -1,5 +1,6 @@
   - Improve the accuracy of extracting www.taiwannews.com.tw
   - Improve the extraction of news.cts.com.tw
+  - Add a site-specific extractor for estate.ltn.com.tw
 
 v0.10.0 2020-02-04T09:01:00+0900
   - Improve the extraction of turnnewsapp.com
